[package]
name = "xmltojson"
version = "0.1.0"
authors = ["konstantin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.3.1"
serde_derive = "1.0"
serde = "1.0"
xmlJSON = "0.2.0"
rustc-serialize = "0.3.16"
