[package]
name = "xmltojson"
version = "0.1.0"
authors = ["konstantin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlJSON = "0.2.0"
rustc-serialize = "0.3.16"
encoding_rs = "0.8.17"
glob = "0.3.0"
rayon = "1.1"
reql = "0.0.26"
reql-types = "0.0.4"
futures = "0.1.28"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 3
